Showing Token Balances,Channels, UserInput

--- a/raiden/raidenwebui/src/app/app.component.html
+++ b/raiden/raidenwebui/src/app/app.component.html
@@ -1,17 +1,39 @@
-<mz-navbar navbarClass="cyan lighten-1">
-  <a href="#" class="brand-logo">Raiden</a>
-  <mz-navbar-item-container [align]="'right'">
-    <mz-navbar-item>
-      <button mz-button (click)="participateModal.open()">Participate</button>
-    </mz-navbar-item>
-    <mz-navbar-item><a href="#">{{raidenAddress}}</a></mz-navbar-item>
-  </mz-navbar-item-container>
-</mz-navbar>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">{{title}}</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <p class="navbar-text">{{raidenAddress}}</p>
+        <button type="button" class="btn btn-default navbar-btn">Participate Now</button>
+      </ul>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
 <div class="container-fluid top10">
   <div class="row">
     <div class="col-md-8">
-      <app-channel-table></app-channel-table>
-      <app-userinteraction></app-userinteraction>
+      <p-accordion [multiple]="true">
+        <p-accordionTab header="Token Balances">
+           <app-token-network></app-token-network>
+        </p-accordionTab>
+        <p-accordionTab header="Channels">
+            <app-channel-table></app-channel-table>
+        </p-accordionTab>
+        <app-userinteraction></app-userinteraction>
+      </p-accordion>
     </div>
     <div class="col-md-4">
       <app-event-list></app-event-list>
