--- a/raiden/raidenwebui/src/app/components/userinteraction/userinteraction.component.html
+++ b/raiden/raidenwebui/src/app/components/userinteraction/userinteraction.component.html
@@ -1,12 +1,11 @@
 <div class="container-fluid top10">
     <md-tab-group>
       <md-tab label="Open Channel">
-        <div class="top10"></div>
         <form>
-          <table class="example-full-width" cellspacing="0">
+          <table class="example-full-width top10" cellspacing="0">
             <tr><td>
               <md-input-container>
-                <input mdInput type="text" id="channel_address" name="channel_address"
+                <input mdInput id="channel_address" name="channel_address"
                        [(ngModel)]="newChannel.channel_address" placeholder="Channel Address">
               </md-input-container>
             </td></tr>
@@ -24,7 +23,7 @@
             </td></tr>
             <tr><td>
               <md-input-container>
-                <input mdInput type="number" id="settle_timeout" name="settle_timeout"
+                <input mdInput type="number" name="settle_timeout"
                        [(ngModel)]="newChannel.settle_timeout" placeholder="Settle Timeout">
               </md-input-container>
             </td></tr>
