--- a/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
+++ b/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
@@ -13,6 +13,8 @@
           [style]="{width: '70px', 'text-align': 'center'}"></p-column>
           <p-column field="settle_timeout" header="SettleTimeout"
           [style]="{width: '100px', 'text-align': 'center'}"></p-column>
+          <p-column field="reveal_timeout" header="RevealTimeout"
+          [style]="{width: '100px', 'text-align': 'center'}"></p-column>
       </p-dataTable>
     </ng-template>
     <ng-template #msg>You have no Channels yet.</ng-template>
@@ -51,6 +53,10 @@
                   <div class="ui-grid-row">
                       <div class="ui-grid-col-3">SettleTimeout</div>
                       <div class="ui-grid-col-9">{{channel.settle_timeout}}</div>
+                  </div>
+                  <div class="ui-grid-row">
+                      <div class="ui-grid-col-3">RevealTimeout</div>
+                      <div class="ui-grid-col-9">{{channel.reveal_timeout}}</div>
                   </div>
               </div>
           </ng-template>
@@ -94,6 +100,10 @@
                     <div class="ui-grid-row">
                       <div class="ui-grid-col-3">SettleTimeout: </div>
                       <div class="ui-grid-col-11">{{channel.settle_timeout}}</div>
+                    </div>
+                    <div class="ui-grid-row">
+                      <div class="ui-grid-col-3">RevealTimeout: </div>
+                      <div class="ui-grid-col-11">{{channel.reveal_timeout}}</div>
                     </div>
                   </div>
                 </div>
