--- a/raiden/raidenwebui/src/app/components/userinteraction/userinteraction.component.html
+++ b/raiden/raidenwebui/src/app/components/userinteraction/userinteraction.component.html
@@ -5,8 +5,8 @@
           <table class="example-full-width top10" cellspacing="0">
             <tr><td>
               <md-input-container>
-                <input mdInput id="channel_address" name="channel_address"
-                       [(ngModel)]="newChannel.channel_address" placeholder="Channel Address">
+                <input mdInput id="partner_address" name="partner_address"
+                       [(ngModel)]="newChannel.partner_address" placeholder="Partner Address">
               </md-input-container>
             </td></tr>
             <tr><td>
@@ -27,24 +27,89 @@
                        [(ngModel)]="newChannel.settle_timeout" placeholder="Settle Timeout">
               </md-input-container>
             </td></tr>
+            <tr><td>
+            <button md-button>Open Channel</button>
+            </td></tr>
           </table>
         </form>
       </md-tab>
       <md-tab label="Transfer Amount">
-        <h1>Some more tab content</h1>
-        <p>...</p>
+        <form>
+          <table class="example-full-width top10" cellspacing="0">
+            <tr><td>
+              <md-input-container>
+                <input mdInput id="token_address" name="token_address"
+                       [(ngModel)]="newChannel.token_address" placeholder="Token Address">
+              </md-input-container>
+            </td></tr>
+            <tr><td>
+              <md-input-container>
+                <input mdInput id="partner_address" name="partner_address"
+                       [(ngModel)]="newChannel.token_address" placeholder="Target Address">
+              </md-input-container>
+            </td></tr>
+            <tr><td>
+              <md-input-container>
+                <input mdInput id="amount" name="amount"
+                       [(ngModel)]="amount" placeholder="Amount">
+              </md-input-container>
+            </td></tr>
+            <tr><td>
+            <button md-button>Transfer</button>
+            </td></tr>
+          </table>
+        </form>
       </md-tab>
       <md-tab label="Deposit Amount">
-        <h1>Some more tab content</h1>
-        <p>...</p>
+        <form>
+          <table class="example-full-width top10" cellspacing="0">
+            <tr><td>
+              <md-input-container>
+                <input mdInput id="channel_address" name="channel_address"
+                       [(ngModel)]="newChannel.channel_address" placeholder="Channel Address">
+              </md-input-container>
+            </td></tr>
+            <tr><td>
+              <md-input-container>
+                <input mdInput type="number" id="balance" name="balance"
+                       [(ngModel)]="newChannel.balance" placeholder="Balance">
+              </md-input-container>
+            </td></tr>
+            <tr><td>
+            <button md-button>Deposit</button>
+            </td></tr>
+          </table>
+        </form>
       </md-tab>
       <md-tab label="Close">
-        <h1>Some more tab content</h1>
-        <p>...</p>
+        <form>
+          <table class="example-full-width top10" cellspacing="0">
+            <tr><td>
+              <md-input-container>
+                <input mdInput id="channel_address" name="channel_address"
+                       [(ngModel)]="newChannel.channel_address" placeholder="Channel Address">
+              </md-input-container>
+            </td></tr>
+            <tr><td>
+            <button md-button>Close</button>
+            </td></tr>
+          </table>
+        </form>
       </md-tab>
       <md-tab label="Settle">
-        <h1>Some more tab content</h1>
-        <p>...</p>
+        <form>
+          <table class="example-full-width top10" cellspacing="0">
+            <tr><td>
+              <md-input-container>
+                <input mdInput id="channel_address" name="channel_address"
+                       [(ngModel)]="newChannel.channel_address" placeholder="Channel Address">
+              </md-input-container>
+            </td></tr>
+            <tr><td>
+            <button md-button>Settle</button>
+            </td></tr>
+          </table>
+        </form>
       </md-tab>
     </md-tab-group>
 </div>
