Adding a home component and proper messages to display for the user

--- a/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
+++ b/raiden/raidenwebui/src/app/components/channel-table/channel-table.component.html
@@ -57,7 +57,7 @@
   </div>
   <p-footer>
     <div class="ui-dialog-buttonpane ui-helper-clearfix">
-      <button type="button" pButton icon="fa-exchange" (click)="manageChannel()" label="{{action}}"></button>
+      <button type="button" pButton icon="fa-exchange" (click)="manageChannel()" label="{{action| uppercase}}"></button>
     </div>
   </p-footer>
 </p-dialog>
